# pymono

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/package-a/: devcontainer.json
.devcontainer/package-b/: devcontainer.json
.devcontainer/package-c/: devcontainer.json
.devcontainer/package-d/: devcontainer.json
.docker/: Dockerfile  docker-compose.yml
.github/actions/check_version/: action.yml
.github/actions/get_project/: action.yml
.github/actions/uvtest/: action.yml
.github/workflows/: ci.yml  publish.yml
src/pymono/: __init__.py  github.py  template.py  types.py  utils.py
src/pymono/templates/: devcontainer.json.j2  pyproject.toml.j2
src/uvmono/: __init__.py
src/uvmono/templates/: devcontainer.json.j2  dockerfile.j2  pyproject.toml.j2
tests/: test_get_dependents.py  test_pymono.py  test_uvmono.py
