[project]
name = "pymono"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jens Peder Meldgaard", email = "JensPederM@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "jinja2",
    "package-d",
]

[project.scripts]
pymono = "pymono:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/package-a", "packages/package-b", "packages/package-d", "packages/package-c"]

[tool.uv.sources]
package-d = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0"]

[tool.pytest.ini_options]
addopts = """
--cov-report=term \
--cov-report=xml:coverage.xml \
--cov=pymono \
-ra
-vv"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
